--- a/index.html
+++ b/index.html
@@ -15,8 +15,23 @@
 </head>
 
 <body>
-  <h1>hello world</h1>
-  <button class="btn">Back To home</button>
+  <nav class="main-navbar">
+    <ul>
+      <li>
+        <a href="hero.html">hero</a>
+      </li>
+      <li>
+        <a href="cards.html">cards</a>
+      </li>
+      <li>
+        <a href="tiles.html">tiles</a>
+      </li>
+      <li>
+        <a href="layout.html">layout</a>
+      </li>
+    </ul>
+  </nav>
+
 </body>
 
 </html>
