--- a/cards.html
+++ b/cards.html
@@ -15,6 +15,118 @@
 </head>
 
 <body>
+    <section class="cards">
+        <div class="title">
+            <h1 class="small">
+                One column layout
+            </h1>
+            <h1 class="large">
+                Three column layout
+            </h1>
+        </div>
+        <div class="cards-center">
+            <!-- single card -->
+            <article class="card">
+                <img src="images/size-image-1.jpeg" alt="">
+                <!-- card info -->
+                <div class="card-info">
+                    <h3>Card Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, numquam.</p>
+                </div>
+                <!-- card footer -->
+                <div class="card-footer">
+                    <span>
+                        <i class="fab fa-twitter"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-linkedin"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-facebook"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-squarespace"></i>
+                    </span>
+                </div>
+            </article>
+            <!-- end of single card -->
+            <!-- single card -->
+            <article class="card">
+                <img src="images/size-image-2.jpeg" alt="">
+                <!-- card info -->
+                <div class="card-info">
+                    <h3>Card Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, numquam.</p>
+                </div>
+                <!-- card footer -->
+                <div class="card-footer">
+                    <span>
+                        <i class="fab fa-twitter"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-linkedin"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-facebook"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-squarespace"></i>
+                    </span>
+                </div>
+            </article>
+            <!-- end of single card -->
+            <!-- single card -->
+            <article class="card">
+                <img src="images/size-image-3.jpeg" alt="">
+                <!-- card info -->
+                <div class="card-info">
+                    <h3>Card Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, numquam.</p>
+                </div>
+                <!-- card footer -->
+                <div class="card-footer">
+                    <span>
+                        <i class="fab fa-twitter"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-linkedin"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-facebook"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-squarespace"></i>
+                    </span>
+                </div>
+            </article>
+            <!-- end of single card -->
+            <!-- single card -->
+            <article class="card">
+                <img src="images/size-image-4.jpeg" alt="">
+                <!-- card info -->
+                <div class="card-info">
+                    <h3>Card Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, numquam.</p>
+                </div>
+                <!-- card footer -->
+                <div class="card-footer">
+                    <span>
+                        <i class="fab fa-twitter"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-linkedin"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-facebook"></i>
+                    </span>
+                    <span>
+                        <i class="fab fa-squarespace"></i>
+                    </span>
+                </div>
+            </article>
+            <!-- end of single card -->
+        </div>
+    </section>
     <a class="btn" href="index.html">back to home</a>
 </body>
 
