--- a/cards.html
+++ b/cards.html
@@ -17,13 +17,9 @@
 <body>
     <section class="cards">
         <div class="title">
-            <h1 class="small">
-                One column layout
-            </h1>
-            <h1 class="large">
-                Three column layout
-            </h1>
+            <h1>three column layout</h1>
         </div>
+
         <div class="cards-center">
             <!-- single card -->
             <article class="card">
