--- a/cards.html
+++ b/cards.html
@@ -17,7 +17,9 @@
 <body>
     <section class="cards">
         <div class="title">
-            <h1>three column layout</h1>
+            <h1 class="small">one column layout</h1>
+            <h1 class="medium">two column layout</h1>
+            <h1 class="large">three column layout</h1>
         </div>
 
         <div class="cards-center">
