--- a/cards.html
+++ b/cards.html
@@ -54,7 +54,9 @@
                 <!-- card info -->
                 <div class="card-info">
                     <h3>Card Title</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, numquam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, numquam.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, aut obcaecati sunt a ab dolores!
+                    </p>
                 </div>
                 <!-- card footer -->
                 <div class="card-footer">
