--- a/tiles.html
+++ b/tiles.html
@@ -16,7 +16,7 @@
 
 <body>
     <section class="tiles">
-        <div class="tile">
+        <div class="title">
             <h1>Tile layout</h1>
         </div>
         <div class="tile-center">
