--- a/layout.html
+++ b/layout.html
@@ -15,6 +15,55 @@
 </head>
 
 <body>
+    <main class="main">
+        <!-- header -->
+        <header class="header">
+            <h2>Grid Makes Layout easy</h2>
+        </header>
+        <!-- navbar -->
+        <nav class="navbar">
+            <ul>
+                <li>
+                    <a href="hero.html">hero</a>
+                </li>
+                <li>
+                    <a href="cards.html">cards</a>
+                </li>
+                <li>
+                    <a href="tiles.html">tiles</a>
+                </li>
+                <li>
+                    <a href="layout.html">layout</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- content -->
+        <section class="section">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi nulla consequuntur, sit ducimus fugit,
+                corrupti expedita, sint aut iure quo nesciunt sequi et explicabo labore aliquam commodi voluptas
+                dolorum
+                maxime quod voluptates laudantium perspiciatis enim exercitationem? Libero aliquam sunt modi! Sunt
+                magnam quod odit. Necessitatibus eius et voluptates vitae reiciendis molestias. Fugit ducimus adipisci
+                libero blanditiis sed, eos repudiandae, voluptas dicta sit debitis minus eligendi aspernatur commodi
+                magni eius qui ab sunt laudantium optio! Facilis?</p>
+        </section>
+
+        <!-- side bar social -->
+        <section class="sidebar">
+            <span><i class="fab fa-twitter"></i></span>
+            <span><i class="fab fa-facebook"></i></span>
+            <span><i class="fab fa-youtube"></i></span>
+            <span><i class="fab fa-github"></i></span>
+            <span><i class="fab fa-linkedin"></i></span>
+        </section>
+
+        <!-- footer -->
+        <footer class="footer">
+            <p>
+                Copyright &copy; all rights reserved
+            </p>
+        </footer>
+    </main>
     <a class="btn" href="index.html">back to home</a>
 </body>
 
