layout css small screen and 768px screen

--- a/layout.html
+++ b/layout.html
@@ -39,13 +39,12 @@
         </nav>
         <!-- content -->
         <section class="section">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi nulla consequuntur, sit ducimus fugit,
-                corrupti expedita, sint aut iure quo nesciunt sequi et explicabo labore aliquam commodi voluptas
-                dolorum
-                maxime quod voluptates laudantium perspiciatis enim exercitationem? Libero aliquam sunt modi! Sunt
-                magnam quod odit. Necessitatibus eius et voluptates vitae reiciendis molestias. Fugit ducimus adipisci
-                libero blanditiis sed, eos repudiandae, voluptas dicta sit debitis minus eligendi aspernatur commodi
-                magni eius qui ab sunt laudantium optio! Facilis?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id rerum saepe, possimus iste aliquam quia dolor
+                reiciendis! Perferendis aliquid modi necessitatibus optio delectus, eligendi voluptas dicta distinctio
+                nesciunt aut sint natus nobis ea ullam eius blanditiis rem quasi aspernatur. Iusto maxime explicabo quos
+                magnam totam ad velit corrupti eos ex atque laborum sed nesciunt id omnis qui tempora facilis
+                repudiandae necessitatibus, quam obcaecati culpa ipsam temporibus earum! Nemo animi cum suscipit
+                voluptates nihil vitae, sapiente soluta illum fugit maiores ratione.</p>
         </section>
 
         <!-- side bar social -->
